# python-project-lvl2

./: README.md  pyproject.toml
gendiff/: __init__.py  gendiff1.py
gendiff/scripts/: .gendiff.py.swp  __init__.py  file_parsing.py  gendiff.py
gendiff/tests/: test_gendiff.py
