[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Вычислитель отличий"
authors = ["CergChelpanov <chelpanov960@gmail.com>"]
license = "free"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9.5"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:gendiff"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
